@@ -1,3 +1,15 @@
+2009-07-17T02:14  Sam Hocevar <sam@zoy.org>
+
+	Overview: more complete and consistent Gapi detection.
+
+	* configure.ac:
+	- Check for gapi-parser / gapi2-parser.
+	- Rename FIXUP and CODEGEN to GAPI_FIXUP and GAPI_CODEGEN
+	* sources/Makefile.am gtkglarea/Makefile.am:
+	- Reflect changes made to configure.ac.
+	- Call $(GAPI_FIXUP) and $(GAPI_PARSER) instead of gapi2-fixup and
+	gapi2-parser.
+
 2009-07-17T01:53  Sam Hocevar <sam@zoy.org>
 
 	Remove everything gtkglext until we really decide to support it; as
